RESOLVED FIXED 106022
incorrect flexbox relayout with overflow, padding and absolute positioning
https://bugs.webkit.org/show_bug.cgi?id=106022
Summary incorrect flexbox relayout with overflow, padding and absolute positioning
Ojan Vafai
Reported 2013-01-03 10:39:27 PST
Attachments
test case (511 bytes, text/html)
2013-01-03 10:39 PST, Ojan Vafai
no flags
Patch (8.77 KB, patch)
2013-01-03 15:30 PST, Tony Chang
no flags
Tony Chang
Comment 1 2013-01-03 15:30:47 PST
WebKit Review Bot
Comment 2 2013-01-03 17:22:25 PST
Comment on attachment 181235 [details] Patch Clearing flags on attachment: 181235 Committed r138770: <http://trac.webkit.org/changeset/138770>
WebKit Review Bot
Comment 3 2013-01-03 17:22:29 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.